--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ pandas = "^2.2.0"
 librosa = "^0.10.1"
 matplotlib = "3.7"
 datasets = {extras = ["audio"], version = "^2.16.1"}
-transformers = "^4.37.0"
+transformers = {extras = ["torch"], version = "^4.37.0"}
 
 
 [tool.poetry.group.dev.dependencies]
